# astrostack

./: .dockerignore  .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml  install-astap.sh
docs/: IMPROVEMENTS.md  agent-prompt-scout.md  agent-prompt.md  glossary.md  webapp.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: agent-setup.sh
seestack/: __init__.py  __main__.py  activity_calendar.py  annotate.py  coords.py  framing.py  imaging_log.py  library_summary.py  nameplate.py  nightplan.py  objectinfo.py  plan.py  portfolio.py  scalebar.py  session_recap.py  sharecard.py  stackhealth.py  target_difficulty.py  wallpaper.py
tests/: conftest.py  smoke_gui.py  synth.py  test_accumulator.py  test_activity_calendar.py  test_align_gpu_parity.py  test_annotate.py  test_asinh_stretch_robust.py  test_astap.py  test_auto_prefs.py  test_bg_flatten.py  test_bg_gpu.py  test_bg_gpu_shim.py  test_bg_modes.py  test_bg_object_mask_dilation_parity.py  test_cache.py  test_calibrate.py  test_calibration_mosaic_edge.py  test_channel_combine.py  test_color_cal.py  test_color_cal_mosaic.py  test_colormap.py  test_compare_dialog.py  test_coords.py  test_coverage_leveling.py  test_coverage_trim.py  test_deepening_reel.py  test_drizzle.py  test_drizzle_reject.py  test_edit_curve.py  test_edit_engine.py  test_edit_levels.py  test_edit_noise.py  test_edit_ops_pixel_transform.py  test_edit_starmask.py  test_edit_stretch.py  test_edit_tone_ops.py  test_end_to_end.py  test_estimate_reference_suggestion.py  test_export_scripts.py  (+80 more)
webapp/: __init__.py  auth.py  calibration.py  config.py  deps.py  ics.py  jobs.py  logbuffer.py  main.py  pipeline.py  (+5 more)
(+410 files in other folders)
