[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seestack"
version = "0.1.3"
description = "Astrophotography stacker for the ZWO Seestar — scalable alternative to DeepSkyStacker."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Seestack contributors" }]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "astropy>=6.0",
    "photutils>=1.12",
    "ccdproc>=2.4",
    "astroalign>=2.5",
    "reproject>=0.13",
    "drizzle>=1.15",
    "scikit-image>=0.22",
    "PySide6>=6.6",
    "Pillow>=10.2",
    "tifffile>=2024.2.12",
    "tqdm>=4.66",
    "platformdirs>=4.2",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=13.0"]
# Headless web service (TrueNAS / Docker). Deliberately excludes PySide6.
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "watchdog>=4.0",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]

[project.scripts]
seestack = "seestack.gui.main:main"
astrostack-web = "webapp.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["seestack*", "webapp*"]

[tool.setuptools.package-data]
# The built React SPA (produced by `npm run build` into webapp/static).
webapp = ["static/*", "static/assets/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
